--- a/.github/workflows/docker-image-workflow.yml
+++ b/.github/workflows/docker-image-workflow.yml
@@ -9,3 +9,13 @@ jobs:
     steps:
     - name:  Checkout code
       uses:  actions/checkout@v3
+      
+    - name: Build
+      run: |
+        echo: "Docker build"
+    - name: Tag Docker Image
+      run: |
+        echo: "Tag Docker Image"
+    - name: Docker push image
+      run: |
+        echo "Docker push image"
