--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,3 +14,17 @@ jobs:
       with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
+          
+    - name: Extract Metadata (Tags and Labels) for Docker Image
+      id: meta
+      uses: docker/metadata-action@v4
+      with:
+          images: Ako-R39/publish-docker-image
+          
+    - name: Build and push           
+      uses: docker/build-push-action@v4           
+      with:           
+          context: .           
+          push: true           
+          tags: user/app:latest          
+      
